--- a/source/_posts/Sentry/React集成Sentry/1.Sentry日志监控配置.md
+++ b/source/_posts/Sentry/React集成Sentry/1.Sentry日志监控配置.md
@@ -32,7 +32,8 @@ categories: Sentry
 - 创建项目
 - 完成后可以在项目面板看到创建好的项目
 
-![创建项目1.png](https://cdn.nlark.com/yuque/0/2021/png/12735713/1616857303187-f0fb89b5-2ca6-4f00-acee-b2884dbb6d21.png#align=left&display=inline&height=969&margin=%5Bobject%20Object%5D&name=%E5%88%9B%E5%BB%BA%E9%A1%B9%E7%9B%AE1.png&originHeight=969&originWidth=1906&size=294762&status=done&style=shadow&width=1906)![创建项目2.png](https://cdn.nlark.com/yuque/0/2021/png/12735713/1616857311251-fdcde370-e000-4a41-b40a-62130f70ab07.png#align=left&display=inline&height=967&margin=%5Bobject%20Object%5D&name=%E5%88%9B%E5%BB%BA%E9%A1%B9%E7%9B%AE2.png&originHeight=967&originWidth=1900&size=446388&status=done&style=shadow&width=1900)
+![创建项目1.png](https://cdn.nlark.com/yuque/0/2021/png/12735713/1616857303187-f0fb89b5-2ca6-4f00-acee-b2884dbb6d21.png#align=left&display=inline&height=969&margin=%5Bobject%20Object%5D&name=%E5%88%9B%E5%BB%BA%E9%A1%B9%E7%9B%AE1.png&originHeight=969&originWidth=1906&size=294762&status=done&style=shadow&width=1906)
+![创建项目2.png](https://cdn.nlark.com/yuque/0/2021/png/12735713/1616857311251-fdcde370-e000-4a41-b40a-62130f70ab07.png)
 ## 四、配置异常监控
 ### 安装React依赖
 ```shell
