--- a/source/_posts/Sentry/React集成Sentry/1.Sentry日志监控配置.md
+++ b/source/_posts/Sentry/React集成Sentry/1.Sentry日志监控配置.md
@@ -16,7 +16,7 @@ categories: Sentry
 支持 Java、PHP、Python、JavaScript 等前后端主流编程语言，也可应用于前端主流框架，如 React、Vue 、Angular 等。
 
 
-![sentry.png](https://cdn.nlark.com/yuque/0/2021/png/12735713/1616856747456-f9fcd78a-7d0e-41d1-863b-268609f929f2.png#align=left&display=inline&height=969&margin=%5Bobject%20Object%5D&name=sentry.png&originHeight=969&originWidth=1905&size=111720&status=done&style=shadow&width=1905)
+![sentry.png](https://cdn.nlark.com/yuque/0/2021/png/12735713/1616856747456-f9fcd78a-7d0e-41d1-863b-268609f929f2.png)
 
 
 以下主要介绍Sentry在React项目中的应用。
@@ -32,7 +32,8 @@ categories: Sentry
 - 创建项目
 - 完成后可以在项目面板看到创建好的项目
 
-![创建项目1.png](https://cdn.nlark.com/yuque/0/2021/png/12735713/1616857303187-f0fb89b5-2ca6-4f00-acee-b2884dbb6d21.png#align=left&display=inline&height=969&margin=%5Bobject%20Object%5D&name=%E5%88%9B%E5%BB%BA%E9%A1%B9%E7%9B%AE1.png&originHeight=969&originWidth=1906&size=294762&status=done&style=shadow&width=1906)
+![创建项目1.png](https://cdn.nlark.com/yuque/0/2021/png/12735713/1616857303187-f0fb89b5-2ca6-4f00-acee-b2884dbb6d21.png)
+
 ![创建项目2.png](https://cdn.nlark.com/yuque/0/2021/png/12735713/1616857311251-fdcde370-e000-4a41-b40a-62130f70ab07.png)
 ## 四、配置异常监控
 ### 安装React依赖
@@ -62,12 +63,20 @@ Sentry.init({
 
 
 dsn 的查找方法：sentry平台 - 对应的项目 - 设置 - Client Keys（DSN） - DSN
-![DSN.png](https://cdn.nlark.com/yuque/0/2021/png/12735713/1616858820020-fd93bb1b-47ab-4762-bee8-5cfc845f6b9b.png#align=left&display=inline&height=968&margin=%5Bobject%20Object%5D&name=DSN.png&originHeight=968&originWidth=1899&size=219742&status=done&style=shadow&width=1899)
+![DSN.png](https://cdn.nlark.com/yuque/0/2021/png/12735713/1616858820020-fd93bb1b-47ab-4762-bee8-5cfc845f6b9b.png)
 
 
 ### 验证
 初始化完成后，模拟一个异常，可以看到发送了 `?sentry_key=xxx` 请求，同时sentry平台有错误日志，证明异常监控已配置成功。
-![模拟报错1.png](https://cdn.nlark.com/yuque/0/2021/png/12735713/1616858840217-fe092b14-fa6d-43ce-8fbf-f23dc31842db.png#align=left&display=inline&height=114&margin=%5Bobject%20Object%5D&name=%E6%A8%A1%E6%8B%9F%E6%8A%A5%E9%94%991.png&originHeight=114&originWidth=615&size=6892&status=done&style=shadow&width=615)![模拟报错2.png](https://cdn.nlark.com/yuque/0/2021/png/12735713/1616858852863-98b15190-a47f-4d5e-af38-3d6a0fe9922c.png#align=left&display=inline&height=937&margin=%5Bobject%20Object%5D&name=%E6%A8%A1%E6%8B%9F%E6%8A%A5%E9%94%992.png&originHeight=937&originWidth=1920&size=145017&status=done&style=shadow&width=1920)![模拟报错3.png](https://cdn.nlark.com/yuque/0/2021/png/12735713/1616858860057-d08e6e1b-a96d-4e5b-b5fb-b11aaa08641a.png#align=left&display=inline&height=804&margin=%5Bobject%20Object%5D&name=%E6%A8%A1%E6%8B%9F%E6%8A%A5%E9%94%993.png&originHeight=804&originWidth=1742&size=86586&status=done&style=shadow&width=1742)![模拟报错4.png](https://cdn.nlark.com/yuque/0/2021/png/12735713/1616858961963-74531326-9bd1-4a06-a29f-6585f8267abd.png#align=left&display=inline&height=792&margin=%5Bobject%20Object%5D&name=%E6%A8%A1%E6%8B%9F%E6%8A%A5%E9%94%994.png&originHeight=792&originWidth=1920&size=198616&status=done&style=shadow&width=1920)![模拟报错5.png](https://cdn.nlark.com/yuque/0/2021/png/12735713/1616858875999-61a90973-bce3-4bc1-a487-91208bf37869.png#align=left&display=inline&height=937&margin=%5Bobject%20Object%5D&name=%E6%A8%A1%E6%8B%9F%E6%8A%A5%E9%94%995.png&originHeight=937&originWidth=1899&size=270460&status=done&style=shadow&width=1899)
+![模拟报错1.png](https://cdn.nlark.com/yuque/0/2021/png/12735713/1616858840217-fe092b14-fa6d-43ce-8fbf-f23dc31842db.png)
+
+![模拟报错2.png](https://cdn.nlark.com/yuque/0/2021/png/12735713/1616858852863-98b15190-a47f-4d5e-af38-3d6a0fe9922c.png)
+
+![模拟报错3.png](https://cdn.nlark.com/yuque/0/2021/png/12735713/1616858860057-d08e6e1b-a96d-4e5b-b5fb-b11aaa08641a.png)
+
+![模拟报错4.png](https://cdn.nlark.com/yuque/0/2021/png/12735713/1616858961963-74531326-9bd1-4a06-a29f-6585f8267abd.png)
+
+![模拟报错5.png](https://cdn.nlark.com/yuque/0/2021/png/12735713/1616858875999-61a90973-bce3-4bc1-a487-91208bf37869.png)
 
 
 ## 五、设置日志信息
@@ -104,7 +113,7 @@ Sentry.setUser({
 ```javascript
 Sentry.setTag('appName', '应用名');
 ```
-![tags.png](https://cdn.nlark.com/yuque/0/2021/png/12735713/1616859020891-bf130c82-a431-4e94-be4d-480059824b98.png#align=left&display=inline&height=160&margin=%5Bobject%20Object%5D&name=tags.png&originHeight=319&originWidth=1197&size=15664&status=done&style=shadow&width=599)
+![tags.png](https://cdn.nlark.com/yuque/0/2021/png/12735713/1616859020891-bf130c82-a431-4e94-be4d-480059824b98.png)
 
 
 ### 参考文档
