--- a/source/_posts/微信小程序/微信生态各类型小程序开发模式介绍/1.微信小程序.md
+++ b/source/_posts/微信小程序/微信生态各类型小程序开发模式介绍/1.微信小程序.md
@@ -36,7 +36,7 @@ categories: 小程序
 注册完成，登录之后即可看到小程序相关信息。在我们的业务场景中，关注较多的是“管理”“开发”“设置”菜单，建议多熟悉每个菜单中的设置项。
 
 
-![微信公众平台常用菜单.png](https://cdn.nlark.com/yuque/0/2021/png/12735713/1615019232344-089ea5e2-19b9-4b43-b477-af44e48aab71.png#align=left&display=inline&height=969&margin=%5Bobject%20Object%5D&name=%E5%BE%AE%E4%BF%A1%E5%85%AC%E4%BC%97%E5%B9%B3%E5%8F%B0%E5%B8%B8%E7%94%A8%E8%8F%9C%E5%8D%95.png&originHeight=969&originWidth=1910&size=84883&status=done&style=shadow&width=1910)
+![微信公众平台常用菜单.png](https://cdn.nlark.com/yuque/0/2021/png/12735713/1615019232344-089ea5e2-19b9-4b43-b477-af44e48aab71.png)
 
 
 ### 开发者权限
@@ -66,7 +66,7 @@ categories: 小程序
 安装完成之后，需要微信扫码登录一下，然后，就可以开始创建小程序项目。
 
 
-![创建小程序项目.png](https://cdn.nlark.com/yuque/0/2021/png/12735713/1615013828387-c75b3a4a-59d6-416c-bc47-7e2de5130f00.png#align=left&display=inline&height=600&margin=%5Bobject%20Object%5D&name=%E5%88%9B%E5%BB%BA%E5%B0%8F%E7%A8%8B%E5%BA%8F%E9%A1%B9%E7%9B%AE.png&originHeight=600&originWidth=800&size=36046&status=done&style=shadow&width=800)
+![创建小程序项目.png](https://cdn.nlark.com/yuque/0/2021/png/12735713/1615013828387-c75b3a4a-59d6-416c-bc47-7e2de5130f00.png)
 
 
 创建时需要有AppID，可以在微信公众平台选择小程序登录后，通过“设置-基本设置”菜单找到当前小程序的AppID。
@@ -76,7 +76,7 @@ categories: 小程序
 
 
 
-![查看AppID.png](https://cdn.nlark.com/yuque/0/2021/png/12735713/1615014155517-768a6a52-a3a2-4abe-b55e-669dfc17b189.png#align=left&display=inline&height=819&margin=%5Bobject%20Object%5D&name=%E6%9F%A5%E7%9C%8BAppID.png&originHeight=819&originWidth=1624&size=52739&status=done&style=shadow&width=1624)
+![查看AppID.png](https://cdn.nlark.com/yuque/0/2021/png/12735713/1615014155517-768a6a52-a3a2-4abe-b55e-669dfc17b189.png)
 
 
 如果创建时提示不是该小程序的开发者或者没有开发者权限，请联系管理员添加~
@@ -102,7 +102,7 @@ categories: 小程序
 
 
 
-![创建项目成功.png](https://cdn.nlark.com/yuque/0/2021/png/12735713/1615015761943-f9aa9796-aabb-4ea1-9370-a6b18caf384f.png#align=left&display=inline&height=1040&margin=%5Bobject%20Object%5D&name=%E5%88%9B%E5%BB%BA%E9%A1%B9%E7%9B%AE%E6%88%90%E5%8A%9F.png&originHeight=1040&originWidth=1920&size=95882&status=done&style=shadow&width=1920)
+![创建项目成功.png](https://cdn.nlark.com/yuque/0/2021/png/12735713/1615015761943-f9aa9796-aabb-4ea1-9370-a6b18caf384f.png)
 
 
 ### 全局配置及入口逻辑
@@ -132,13 +132,13 @@ categories: 小程序
 这一类的域名，都需要在“微信公众平台 - 开发 - 开发管理 - 开发设置”中配置相关可信域名。
 
 
-![域名配置.png](https://cdn.nlark.com/yuque/0/2021/png/12735713/1615019262072-c3532cc9-43de-444b-9f3a-d536c433dfb8.png#align=left&display=inline&height=969&margin=%5Bobject%20Object%5D&name=%E5%9F%9F%E5%90%8D%E9%85%8D%E7%BD%AE.png&originHeight=969&originWidth=1908&size=63273&status=done&style=shadow&width=1908)
+![域名配置.png](https://cdn.nlark.com/yuque/0/2021/png/12735713/1615019262072-c3532cc9-43de-444b-9f3a-d536c433dfb8.png)
 
 
 配置完成之后，可以在“开发者工具 - 详情 - 项目配置”中看到配置成功的域名信息。
 
 
-![域名配置成功.png](https://cdn.nlark.com/yuque/0/2021/png/12735713/1615016066086-0affb64e-f466-47d3-a04f-3adb3b104f8c.png#align=left&display=inline&height=1040&margin=%5Bobject%20Object%5D&name=%E5%9F%9F%E5%90%8D%E9%85%8D%E7%BD%AE%E6%88%90%E5%8A%9F.png&originHeight=1040&originWidth=1920&size=98784&status=done&style=shadow&width=1920)
+![域名配置成功.png](https://cdn.nlark.com/yuque/0/2021/png/12735713/1615016066086-0affb64e-f466-47d3-a04f-3adb3b104f8c.png)
 
 
 ##### 2、包内存大小限制：
@@ -175,7 +175,7 @@ categories: 小程序
 
 
 
-![预览生成二维码.png](https://cdn.nlark.com/yuque/0/2021/png/12735713/1615016784069-3d6d8247-1eda-4a34-b2f0-02252de58644.png#align=left&display=inline&height=1040&margin=%5Bobject%20Object%5D&name=%E9%A2%84%E8%A7%88%E7%94%9F%E6%88%90%E4%BA%8C%E7%BB%B4%E7%A0%81.png&originHeight=1040&originWidth=1920&size=97061&status=done&style=shadow&width=1920)
+![预览生成二维码.png](https://cdn.nlark.com/yuque/0/2021/png/12735713/1615016784069-3d6d8247-1eda-4a34-b2f0-02252de58644.png)
 
 
 ### 上传开发版
@@ -200,10 +200,10 @@ categories: 小程序
 
 
 
-![开发者工具上传代码.png](https://cdn.nlark.com/yuque/0/2021/png/12735713/1615017056755-471654ee-486f-4869-ab72-0c6b01c39a09.png#align=left&display=inline&height=1040&margin=%5Bobject%20Object%5D&name=%E5%BC%80%E5%8F%91%E8%80%85%E5%B7%A5%E5%85%B7%E4%B8%8A%E4%BC%A0%E4%BB%A3%E7%A0%81.png&originHeight=1040&originWidth=1920&size=68812&status=done&style=shadow&width=1920)
+![开发者工具上传代码.png](https://cdn.nlark.com/yuque/0/2021/png/12735713/1615017056755-471654ee-486f-4869-ab72-0c6b01c39a09.png)
 
 
-![上传成功.png](https://cdn.nlark.com/yuque/0/2021/png/12735713/1615019295566-ca020293-7595-41b9-9470-38c564db5e22.png#align=left&display=inline&height=969&margin=%5Bobject%20Object%5D&name=%E4%B8%8A%E4%BC%A0%E6%88%90%E5%8A%9F.png&originHeight=969&originWidth=1914&size=71277&status=done&style=shadow&width=1914)
+![上传成功.png](https://cdn.nlark.com/yuque/0/2021/png/12735713/1615019295566-ca020293-7595-41b9-9470-38c564db5e22.png)
 
 
 ### 配置体验版
@@ -221,8 +221,11 @@ categories: 小程序
 
 
 
-![选为体验版.png](https://cdn.nlark.com/yuque/0/2021/png/12735713/1615019330895-87ff48e9-7127-4f86-b364-0c3370793033.png#align=left&display=inline&height=907&margin=%5Bobject%20Object%5D&name=%E9%80%89%E4%B8%BA%E4%BD%93%E9%AA%8C%E7%89%88.png&originHeight=907&originWidth=1903&size=70884&status=done&style=shadow&width=1903)
-![生成体验版.png](https://cdn.nlark.com/yuque/0/2021/png/12735713/1615017584740-552dd550-5160-4129-b770-83b2018d2b08.png#align=left&display=inline&height=921&margin=%5Bobject%20Object%5D&name=%E7%94%9F%E6%88%90%E4%BD%93%E9%AA%8C%E7%89%88.png&originHeight=921&originWidth=1897&size=88656&status=done&style=shadow&width=1897)![体验版标识.png](https://cdn.nlark.com/yuque/0/2021/png/12735713/1615017585987-7e70a39e-c8e2-414c-a09d-b2a674b1b678.png#align=left&display=inline&height=921&margin=%5Bobject%20Object%5D&name=%E4%BD%93%E9%AA%8C%E7%89%88%E6%A0%87%E8%AF%86.png&originHeight=921&originWidth=1895&size=55192&status=done&style=shadow&width=1895)
+![选为体验版.png](https://cdn.nlark.com/yuque/0/2021/png/12735713/1615019330895-87ff48e9-7127-4f86-b364-0c3370793033.png)
+
+![生成体验版.png](https://cdn.nlark.com/yuque/0/2021/png/12735713/1615017584740-552dd550-5160-4129-b770-83b2018d2b08.png)
+
+![体验版标识.png](https://cdn.nlark.com/yuque/0/2021/png/12735713/1615017585987-7e70a39e-c8e2-414c-a09d-b2a674b1b678.png)
 
 
 ## 五、发布阶段
@@ -249,7 +252,7 @@ categories: 小程序
 
 
 
-![提交审核.png](https://cdn.nlark.com/yuque/0/2021/png/12735713/1615019381646-bf02a732-113e-403a-92e7-a177b3a1dadf.png#align=left&display=inline&height=969&margin=%5Bobject%20Object%5D&name=%E6%8F%90%E4%BA%A4%E5%AE%A1%E6%A0%B8.png&originHeight=969&originWidth=1914&size=71554&status=done&style=shadow&width=1914)
+![提交审核.png](https://cdn.nlark.com/yuque/0/2021/png/12735713/1615019381646-bf02a732-113e-403a-92e7-a177b3a1dadf.png)
 
 
 ### 发布
