--- a/source/_posts/微信小程序/微信生态各类型小程序开发模式介绍/3.企业微信小程序.md
+++ b/source/_posts/微信小程序/微信生态各类型小程序开发模式介绍/3.企业微信小程序.md
@@ -48,14 +48,15 @@ categories: 小程序
 开发者工具默认是微信小程序模式，支持的api也仅限于微信环境；如果需要模拟企业微信环境，需要使用 1.02.1903211 及以上版本，并且安装企业微信小程序插件。
 
 
-![插件.png](https://cdn.nlark.com/yuque/0/2021/png/12735713/1615025751593-20f65fdf-2886-4c6a-bc1e-03f5ed6c1dca.png#align=left&display=inline&height=1040&margin=%5Bobject%20Object%5D&name=%E6%8F%92%E4%BB%B6.png&originHeight=1040&originWidth=1920&size=69968&status=done&style=shadow&width=1920)
+![插件.png](https://cdn.nlark.com/yuque/0/2021/png/12735713/1615025751593-20f65fdf-2886-4c6a-bc1e-03f5ed6c1dca.png)
 
 
 安装好插件后，就可以切换到企业微信小程序模式。同时，还需要注意切换企业。
 
 
-![选择模式.png](https://cdn.nlark.com/yuque/0/2021/png/12735713/1615025766575-4a2339bf-5f19-4616-a6fe-859db09531d2.png#align=left&display=inline&height=1040&margin=%5Bobject%20Object%5D&name=%E9%80%89%E6%8B%A9%E6%A8%A1%E5%BC%8F.png&originHeight=1040&originWidth=1920&size=59179&status=done&style=shadow&width=1920)
-![选择企业.png](https://cdn.nlark.com/yuque/0/2021/png/12735713/1615025774895-491a572a-c848-4a23-9ba4-d99466bd24fe.png#align=left&display=inline&height=1040&margin=%5Bobject%20Object%5D&name=%E9%80%89%E6%8B%A9%E4%BC%81%E4%B8%9A.png&originHeight=1040&originWidth=1920&size=78945&status=done&style=shadow&width=1920)
+![选择模式.png](https://cdn.nlark.com/yuque/0/2021/png/12735713/1615025766575-4a2339bf-5f19-4616-a6fe-859db09531d2.png)
+
+![选择企业.png](https://cdn.nlark.com/yuque/0/2021/png/12735713/1615025774895-491a572a-c848-4a23-9ba4-d99466bd24fe.png)
 
 
 ### 开发
