--- a/source/_posts/React/React项目实战/3.React项目实战-HTTP请求.md
+++ b/source/_posts/React/React项目实战/3.React项目实战-HTTP请求.md
@@ -4,52 +4,57 @@ tags: React
 categories: React
 ---
 
-[React 项目实战](https://github.com/liujinge/react-kaka)，持续完善中...
-* {% post_link React项目实战(基础配置) 基础配置 %}
-* {% post_link React项目实战(UI组件) UI组件 %}
-* {% post_link React项目实战(SCSS配置) SCSS配置 %}
-* {% post_link React项目实战(路由配置) 路由配置 %}
-* {% post_link React项目实战(HTTP请求) HTTP请求 %}
-
----
-
-## HTTP 请求
+[React 项目实战](https://github.com/liujinge/react-kaka)
 
 React 并没有提供获取数据的方式，因此需要自己封装 Ajax 或者引入 HTTP 库。
 
+
 目前有很多这类型的库，各有特色，但实现的功能却大同小异。
+
 
 这里我引用的是 `axios`。
 
-### 安装
-```
+
+## 安装
+
+
+```shell
 npm install axios --save
 ```
+## 引入
 
-<!-- more -->
 
-### 引入
-```
+```javascript
 import axios from 'axios';
 ```
 
-### 使用
+
+## 使用
+
+
 常用的使用方式：
 
-```
+
+```javascript
 axios.get(url[, config])
 
 axios.post(url[, data[, config]])
 ```
 
+
 config：请求的基本配置，比如请求头，baseURL等
 
-### 示例
+
+## 示例
+
+
 实际中，一般要对 `axios` 进行封装，直接得到需要的数据。
+
 
 比如新建 axios/index.js 文件并做简单配置：
 
-```
+
+```javascript
 import axios from 'axios';
 
 function errHandler(error) {
@@ -98,9 +103,11 @@ let xhr = ({
 export default xhr;
 ```
 
+
 之后可以在需要请求的地方引入并调用，关键代码如下：
 
-```
+
+```javascript
 import xhr from './../../axios';
 
 -----
@@ -114,6 +121,7 @@ componentWillMount() {
     })
 }
 ```
+
 
 更多的配置，根据 [axios api](https://www.npmjs.com/package/axios) 以及项目需求不断完善就好。
 
