--- a/source/_posts/Hexo/4.GitHub+Hexo搭建个人博客-标签分类.md
+++ b/source/_posts/Hexo/4.GitHub+Hexo搭建个人博客-标签分类.md
@@ -1,35 +1,32 @@
 ---
-title: Hexo+Github 搭建个人博客 （四）
+title: GitHub+Hexo搭建个人博客-标签分类
 tags: Hexo
 categories: Hexo
 ---
 
-{% note warning %}
-在Github page平台上，使用Hexo搭建属于自己的静态博客
-{% endnote %}
+> 在Github page平台上，使用Hexo搭建属于自己的静态博客
 
-本系列分为以下几部分：
-* {% post_link Hexo+Github搭建个人博客(一) 一、基础配置篇 %}
-* {% post_link Hexo+Github搭建个人博客(二) 二、发布更新篇 %}
-* {% post_link Hexo+Github搭建个人博客(三) 三、主题配置篇 %}
-* {% post_link Hexo+Github搭建个人博客(四) 四、标签分类篇 %}
+## 添加标签
 
-## 标签分类篇
 
-### 添加标签
 在前面，我们修改过 next 主题下 _config.yml 文件中的menu选项，添加了标签选项，但点击发现是个未找到的页面，慌不？
 
-<!-- more -->
-
-* 新建标签页面
+- 新建标签页面
 命令行进入 blog 文件夹，输入以下命令，完成后会看到 blog/source 目录下新建了 tags 文件夹，以及其下的 index.md 文件
-```
+
+
+
+```shell
 hexo new page tags
 ```
 
-* 设置页面类型
+
+- 设置页面类型
 打开新生成的 index.md 文件，添加 `type: "tags"`，如下
-```
+
+
+
+```markdown
 ---
 title: 标签
 date: 2017-10-28 16:56:53
@@ -37,9 +34,13 @@ type: "tags"
 ---
 ```
 
-* 设置具体文章的标签
+
+- 设置具体文章的标签
 要为某一篇文章添加标签，只需要在 blog/source/_posts 找到该文章，然后添加 tags，如 hello.md（如果想添加多个标签 `tags: [标签一，标签二]` 即可）
-```
+
+
+
+```markdown
 ---
 title: hello
 date: 2017-10-27 16:32:13
@@ -48,19 +49,31 @@ categories:
 ---
 ```
 
-刷新页面再看一下，稳不？(*￣︶￣)
 
-### 添加分类
+刷新页面再看一下~
+
+
+## 添加分类
+
+
 这下添加分类就简单了，步骤类似
 
-* 新建分类页面
-```
+
+- 新建分类页面
+
+
+
+```shell
 hexo new page categories
 ```
 
-* 设置页面类型
+
+- 设置页面类型
 打开 blog/source/categories 下的 index.md 文件，添加 `type: "categories"`，如下
-```
+
+
+
+```markdown
 ---
 title: 分类
 date: 2017-10-27 16:56:07
@@ -68,26 +81,39 @@ type: "categories"
 ---
 ```
 
-* 设置具体文章的分类
+
+- 设置具体文章的分类
 在 blog/source/_posts 找到该文章，然后添加 categories，如 hello.md
-```
+
+
+
+```shell
 ---
 title: hello
 date: 2017-10-27 16:32:13
 tags: 标签一
 categories: 分类一
 ---
-
 ```
 
-### 添加关于我
-* 新建关于我
-```
+
+## 添加关于我
+
+
+- 新建关于我
+
+
+
+```shell
 hexo new page about
 ```
 
-* 修改 blog/source/about/index.md
-```
+
+- 修改 blog/source/about/index.md
+
+
+
+```markdown
 ---
 title: about
 date: 2017-10-28 16:57:17
@@ -96,8 +122,10 @@ date: 2017-10-28 16:57:17
 Stay Hungry. Stay Foolish.
 ```
 
+
+
 ---
 
-{% note warning %}
+
+
 开启博客之旅吧...
-{% endnote %}
